--- a/resources/css/styleblog.css
+++ b/resources/css/styleblog.css
@@ -1,3 +1,5 @@
+
+
 body {
     width: 100vw;
     height: 100vh;
@@ -42,6 +44,8 @@ section.content {
 }
 
 section.sidebar {
+    display: flex;
+    flex-direction: column;
     background: rgb(29, 28, 28);
     width: 25%;
     height: 100%;
@@ -102,7 +106,7 @@ button {
 }
 
 section > a {
-    margin: 8px;
+    margin: 2px;
     text-decoration: none;
     color:white;
 }
@@ -119,15 +123,17 @@ a:hover {
 
 #graveholder > div {
     position: relative;
+    font-family: 'Dogica', sans-serif
 }
 
 #graveholder>div div {
     display:none;
     position: absolute;
-    top: -8vw;
-    left: -40px;
-    width: 120px;
-    font-size: 0.75em;
+    top: -6vw;
+    left: -60px;
+    width: 160px;
+    font-size: 0.5em;
+    line-height: 1.2em;
     background: black;
     border-radius: 4px;
     box-shadow: black 0px 0px 6px;
@@ -136,4 +142,20 @@ a:hover {
 
 #graveholder>div:hover div {
     display: block;
+}
+
+/* Dogica font-face declarations */
+@font-face {
+    font-family: 'Dogica';
+    src: url('../fonts/dogica.otf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Dogica';
+    src: url('../fonts/dogicabold.otf') format('opentype');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
 }
